1.logo issue 2.Faq 3.Dubai font 4.Arbic changes 5.language change in more options

--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -32,103 +32,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:id="@+id/layoutShareApp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:id="@+id/layoutRequest"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@drawable/circular_menu_bg"
-                        android:layout_margin="5dp">
-                        <ImageView
-                            android:id="@+id/iconRequest"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_share"
-                            android:layout_centerInParent="true"/>
-                    </RelativeLayout>
-                    <TextView
-                        style="@style/font_medium_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="share app"
-                        android:layout_gravity="center"
-                        android:textColor="@color/white"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/layoutRateUs"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@drawable/circular_menu_bg"
-                        android:layout_margin="5dp">
-                        <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_like"
-                            android:layout_centerInParent="true"/>
-                    </RelativeLayout>
-                    <TextView
-                        style="@style/font_medium_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Rate us"
-                        android:layout_gravity="center"
-                        android:textColor="@color/white"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/aboutUs"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:id="@+id/layout2"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@drawable/circular_menu_bg"
-                        android:layout_margin="5dp">
-                        <ImageView
-                            android:id="@+id/icon2"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_about_us"
-                            android:layout_centerInParent="true"/>
-                        <!---->
-                    </RelativeLayout>
-                    <TextView
-                        style="@style/font_medium_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="About us"
-                        android:layout_gravity="center"
-                        android:textColor="@color/white"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/bottomMenuLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:weightSum="3"
-                android:orientation="horizontal"
-                android:layout_below="@+id/topMenuLayout">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:id="@+id/help"
                     android:layout_gravity="center"
                     android:gravity="center"
@@ -139,53 +42,51 @@
                         android:layout_height="60dp"
                         android:background="@drawable/circular_menu_bg"
                         android:layout_margin="5dp">
+
                         <ImageView
                             android:id="@+id/iconlayoutHelp"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:src="@drawable/ic_help_black"
-                            android:layout_centerInParent="true"/>
+                            android:layout_width="24dp"
+                            android:layout_height="27dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_help_black" />
                     </RelativeLayout>
                     <TextView
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="help"
+                        android:text="@string/INTROHELP"
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:id="@+id/faq"
+                    android:id="@+id/layoutLanguage"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:orientation="vertical">
                     <RelativeLayout
-                        android:id="@+id/layoutView"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:background="@drawable/circular_menu_bg"
                         android:layout_margin="5dp">
                         <ImageView
-                            android:id="@+id/iconView"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_faq"
+                            android:id= "@+id/imgLanguage"
+                            android:src="@drawable/ic_like"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Faq"
+                        android:id= "@+id/txtLanguage"
+                        android:text="@string/RATEUS"
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
                 </LinearLayout>
-
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -215,6 +116,111 @@
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
                 </LinearLayout>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/bottomMenuLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:weightSum="3"
+                android:orientation="horizontal"
+                android:layout_below="@+id/topMenuLayout">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/layoutShareApp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:id="@+id/layoutRequest"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/circular_menu_bg"
+                        android:layout_margin="5dp">
+                        <ImageView
+                            android:id="@+id/iconRequest"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_share"
+                            android:layout_centerInParent="true"/>
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/font_medium_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/SHAREKHARETATIAPP"
+                        android:layout_gravity="center"
+                        android:textColor="@color/white"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/faq"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:id="@+id/layoutView"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/circular_menu_bg"
+                        android:layout_margin="5dp">
+                        <ImageView
+                            android:id="@+id/iconView"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_faq"
+                            android:layout_centerInParent="true"/>
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/font_medium_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/FAQMENU"
+                        android:layout_gravity="center"
+                        android:textColor="@color/white"/>
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/aboutUs"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:id="@+id/layout2"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/circular_menu_bg"
+                        android:layout_margin="5dp">
+                        <ImageView
+                            android:id="@+id/icon2"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_about_us"
+                            android:layout_centerInParent="true"/>
+                        <!---->
+                    </RelativeLayout>
+                    <TextView
+                        style="@style/font_medium_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ABOUTUS"
+                        android:layout_gravity="center"
+                        android:textColor="@color/white"/>
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/thirdMenuLayout"
@@ -238,28 +244,60 @@
                         android:layout_height="60dp"
                         android:background="@drawable/circular_menu_bg"
                         android:layout_margin="5dp">
+
                         <ImageView
                             android:id="@+id/iconterms"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_terms_condition"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:src="@drawable/ic_terms_condition" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/textTerms"
+                        style="@style/font_medium_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:singleLine="false"
+                        android:text="@string/TERMSANDCONDITIONS"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/layoutRateUs"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/circular_menu_bg"
+                        android:layout_margin="5dp">
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:src="@drawable/ic_like"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Terms Conditions"
+                        android:text="@string/RATEUS"
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
                 </LinearLayout>
-                <LinearLayout
+                <!--<LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical"/>-->
                 <LinearLayout
                     android:id="@+id/layoutAccessibility"
                     android:layout_width="wrap_content"
@@ -285,7 +323,7 @@
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Accessibility"
+                        android:text="@string/ACCESSIBILITY"
                         android:layout_gravity="center"
                         android:textColor="@color/white"/>
                 </LinearLayout>
