--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -32,7 +32,7 @@
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="plot no: "/>
+                        android:text="@string/plot_no"/>
                     <TextView
                         style="@style/font_medium_bold"
                         android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
                     style="@style/font_medium_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Area: "/>
+                    android:text="@string/area"/>
                 <TextView
                     style="@style/font_medium_regular"
                     android:layout_width="wrap_content"
