--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -48,7 +48,7 @@
                         android:layout_gravity="center_vertical"
                         android:singleLine="true"
                         android:layout_marginTop="5dp"
-                        android:text="Site Plan"
+                        android:text="@string/mymaps"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -80,7 +80,7 @@
                         android:layout_width="wrap_content"
                         android:textSize="16sp"
                         android:layout_height="match_parent"
-                        android:text="Bookmark"
+                        android:text="@string/bookmark"
                         android:layout_marginTop="5dp"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/dubai_font"
