1. Bookmark fetch error issue for Guest user 2. Homepage app crop issue 3. Map Page Bottomsheet visibility issue for Bookmark action

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -118,8 +118,7 @@
                             app:tabBackground="@drawable/tab_color_selector"
                             android:layout_margin="5dp"
                             app:tabGravity="fill"
-                            app:tabMaxWidth="0dp"
-                            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+                            app:tabMaxWidth="0dp"/>
 
                         <!--app:tabIndicatorColor="@color/maroon_dark"
                         app:tabIndicatorHeight="3dp"-->
