--- a/app/src/main/res/layout/attachment_drp_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_ar.xml
@@ -10,6 +10,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:textStyle="bold"
+        style="@style/font_large_bold"
+        android:fontFamily="@font/dubai_font"
         android:textColor="@color/black" />
     <ImageView
         android:id="@+id/imgChevron"
