--- a/app/src/main/res/layout/fragment_land_ownership_selection.xml
+++ b/app/src/main/res/layout/fragment_land_ownership_selection.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/attachment_spinner_bg"
             android:textColor="@color/black"
             android:textStyle="bold"
+            style="@style/font_medium_bold"
             android:visibility="visible"
              />
         <RadioGroup
