--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -10,6 +10,7 @@
         android:id="@+id/container"
         android:background="@color/transparent"
         android:layout_width="match_parent"
+        android:layoutDirection="locale"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
         <com.google.android.material.appbar.AppBarLayout
@@ -27,19 +28,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:elevation="30dp">
-                    <ImageView
-                        android:id="@+id/imgBack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        android:src="@drawable/ic_arrow_white"/>
-                    <ImageView
-                        android:id="@+id/imgHelp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        android:layout_gravity="right"
-                        android:src="@drawable/ic_help"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+                            <ImageView
+                                android:id="@+id/imgBack"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:layout_marginEnd="50dp"
+                                android:layout_marginRight="50dp"
+                                android:gravity="left"
+                                android:src="@drawable/ic_arrow_white"/>
+                        </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+                            <ImageView
+                                android:id="@+id/imgHelp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_margin="15dp"
+                                android:layout_alignParentRight="true"
+                                android:src="@drawable/ic_help" />
+                        </RelativeLayout>
+                    </LinearLayout>
+
                 </FrameLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
