--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layoutDirection="locale">
         <TextView
+            style="@style/font_large_bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -23,16 +24,16 @@
             android:textAlignment="center"
             android:layoutDirection="locale"
             android:text="@string/applicant_details"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:textColor="@color/gray_text_color"
-            android:textDirection="locale"
-            android:textStyle="bold" />
+            android:textDirection="locale"/>
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/font_medium_bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintEnabled="false">
 
             <EditText
+                style="@style/font_medium_bold"
                 android:id="@+id/et_emailaddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,6 +47,7 @@
         </com.google.android.material.textfield.TextInputLayout>
         <!--android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
         <EditText
+            style="@style/font_medium_bold"
             android:id="@+id/et_mobile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,6 +69,7 @@
             android:orientation="vertical">
 
             <Button
+                style="@style/font_medium_bold"
                 android:id="@+id/payNow"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
@@ -77,11 +80,10 @@
                 android:text="@string/pay_now"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textFontWeight="800"
-                android:textSize="16dp"
-                android:textStyle="bold" />
+                android:textFontWeight="800"/>
 
             <Button
+                style="@style/font_medium_bold"
                 android:id="@+id/payLater"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
@@ -94,9 +96,7 @@
                 android:text="@string/pay_later"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textFontWeight="800"
-                android:textSize="16dp"
-                android:textStyle="bold" />
+                android:textFontWeight="800" />
         </LinearLayout>
 
     </LinearLayout>
