--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -11,7 +11,7 @@
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="120dp"
         android:id="@+id/cardHomeGrid"
         android:elevation="10dp"
         android:background="@drawable/grid_background_drawable"
@@ -21,32 +21,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center"
             android:weightSum="1"
             android:background="@drawable/grid_background_drawable"
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_weight="0.6"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginVertical="10dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginVertical="5dp"/>
             <TextView
+                style="@style/font_small_bold"
                 android:id="@+id/txtMenuName"
-                android:layout_below="@+id/imgMenuIcon"
                 android:layout_width="wrap_content"
-                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:text="@{adapterGridMenuVM.getCurrentHomeGridMenuItems(position).nameEn}"
-                android:fontFamily="@font/dubai_font"
                 android:maxLines="2"
-                android:layout_centerHorizontal="true"
+                android:lines="2"
+                android:singleLine="false"
+                android:layout_marginTop="5dp"
                 android:textAlignment="center"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_alignParentBottom="true"/>
+                android:gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/txtAppId"
                 android:layout_below="@+id/imgMenuIcon"
