--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,75 +80,91 @@
                     android:layout_marginVertical="15dp"
                     android:gravity="center"
                     android:orientation="horizontal"/>
-                <RelativeLayout
+                <androidx.cardview.widget.CardView
                     android:id="@+id/layoutRuntimeContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/layoutDots"
-                    android:background="@color/maroon_dark"
                     android:layout_marginBottom="100dp"
+                    android:layout_below="@+id/layoutDots"
                     android:visibility="gone"
-                    android:layout_marginHorizontal="10dp"
+                    android:elevation="10dp"
+                    android:layout_marginHorizontal="15dp"
                     android:layout_marginVertical="10dp">
-                    <TextView
-                        android:id="@+id/txtSearchHeader"
-                        style="@style/font_medium_bold"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/search"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/white"
-                        android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="10dp"/>
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginHorizontal="2dp"
-                        android:background="@color/white"
-                        android:layout_marginVertical="2dp"
-                        android:orientation="vertical"
-                        android:layout_below="@+id/txtSearchHeader">
-                        <com.google.android.material.tabs.TabLayout
-                            style="@style/font_medium_bold_tab"
-                            android:id="@+id/tabRuntimeLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:tabMode="fixed"
-                            app:tabTextAppearance="@style/font_medium_bold_tab"
-                            app:tabTextColor="@color/white"
-                            app:tabBackground="@drawable/tab_color_selector"
-                            android:layout_margin="5dp"
-                            app:tabGravity="fill"
-                            app:tabMaxWidth="0dp"/>
-
-                        <!--app:tabIndicatorColor="@color/maroon_dark"
-                        app:tabIndicatorHeight="3dp"-->
-
+                        android:layout_marginBottom="10dp">
                         <LinearLayout
-                            android:id="@+id/layoutControlHeader"
+                            android:id="@+id/layoutHeader"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:layout_below="@+id/tabRuntimeLayout"
-                            android:background="@color/extra_light_gray">
+                            android:background="@color/maroon_dark">
                             <TextView
+                                android:id="@+id/txtSearchHeader"
                                 style="@style/font_medium_bold"
-                                android:id="@+id/txtHeader"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:textAllCaps="true"
-                                android:gravity="center"
-                                android:textColor="@color/maroon_dark" />
+                                android:text="@string/search"
+                                android:textAlignment="viewStart"
+                                android:textColor="@color/white"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginHorizontal="10dp"/>
                         </LinearLayout>
                         <LinearLayout
-                            android:id="@+id/runtimeParent"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginVertical="10dp"
-                            android:orientation="vertical"/>
-                    </LinearLayout>
-                </RelativeLayout>
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="2dp"
+                            android:background="@color/white"
+                            android:layout_marginVertical="2dp"
+                            android:orientation="vertical"
+                            android:layout_below="@+id/layoutHeader">
+                            <com.google.android.material.tabs.TabLayout
+                                style="@style/font_medium_bold_tab"
+                                android:id="@+id/tabRuntimeLayout"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                app:tabMode="fixed"
+                                app:tabTextAppearance="@style/font_medium_bold_tab"
+                                app:tabTextColor="@color/white"
+                                app:tabBackground="@drawable/tab_color_selector"
+                                android:layout_marginTop="15dp"
+                                app:tabPaddingStart="0dp"
+                                app:tabPaddingEnd="0dp"
+                                app:tabIndicatorHeight="2dp"
+                                android:layout_marginHorizontal="15dp"
+                                app:tabGravity="fill"
+                                app:tabMaxWidth="0dp"/>
+
+                            <!--app:tabIndicatorColor="@color/maroon_dark"
+                            app:tabIndicatorHeight="3dp"-->
+
+                            <LinearLayout
+                                android:id="@+id/layoutControlHeader"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="15dp"
+                                android:layout_marginHorizontal="15dp"
+                                android:layout_below="@+id/tabRuntimeLayout"
+                                android:background="@color/extra_light_gray">
+                                <TextView
+                                    style="@style/font_medium_bold"
+                                    android:id="@+id/txtHeader"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    android:textColor="@color/maroon_dark" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:id="@+id/runtimeParent"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="10dp"
+                                android:orientation="vertical"/>
+                        </LinearLayout>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
         </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
         <!--<include layout="@layout/bottomsheet_webpage" />-->
