--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -175,7 +175,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/edittext_height"
                     android:textAlignment="center"
-                    android:gravity="center_vertical|center_horizontal"
+                    android:gravity="center_vertical|center_horizontal|fill"
                     android:layoutDirection="locale"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
