--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -29,9 +29,11 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        style="@style/font_medium_regular"
+                        style="@style/font_medium_bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textFontWeight="1000"
                         android:text="@string/plot_no"/>
                     <TextView
                         style="@style/font_medium_bold"
@@ -46,8 +48,10 @@
 
                     android:orientation="horizontal">
                 <TextView
-                    style="@style/font_medium_regular"
+                    style="@style/font_medium_bold"
                     android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:textFontWeight="1000"
                     android:layout_height="wrap_content"
                     android:text="@string/area"/>
                 <TextView
@@ -56,6 +60,12 @@
                     android:layout_height="wrap_content"
                     android:text="@{adapterBookmarkVM.getCurrentBookmark(position).Area}"/>
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/txtDescriptionEn"
+                    style="@style/font_medium_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,6 +78,13 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/gotomap"
                     android:src="@drawable/ic_pin_drop_24dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit"
+                    android:src="@drawable/ic_edit_24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>
                 <ImageView
