--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -20,7 +20,7 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsableLayout"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="140dp"
                 android:fitsSystemWindows="true"
                 app:layout_scrollFlags="noScroll"
                 android:background="@drawable/maroon_overlay_bg">
@@ -44,7 +44,7 @@
                                 android:layout_margin="15dp"
                                 android:layout_marginEnd="50dp"
                                 android:layout_marginRight="50dp"
-                                android:gravity="left"
+                                android:gravity="start"
                                 android:src="@drawable/ic_arrow_white"/>
                         </RelativeLayout>
                         <RelativeLayout
@@ -68,6 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:orientation="vertical"
+                    android:id="@+id/stepperHeader"
                     android:layout_marginTop="20dp"
                     app:layout_collapseMode="parallax">
                     <TextView
@@ -77,15 +78,15 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:text="sample"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
                         android:textColor="@color/white"
-                        android:textSize="25sp" />
+                        android:textSize="24sp" />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_margin="20dp"
+                        android:layout_margin="16dp"
                         android:weightSum="4">
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -236,7 +237,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/layoutProfile"
-            android:layout_marginBottom="50dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
         <FrameLayout
             android:layout_width="match_parent"
