--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,6 +134,7 @@
                         android:background="@color/white"
                         android:clickable="true"
                         android:ems="10"
+                        android:singleLine="true"
                         android:focusable="true"
                         android:textAlignment="center"
                         android:gravity="center"
@@ -175,12 +176,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/edittext_height"
                     android:textAlignment="center"
-                    android:gravity="center_vertical"
+                    android:gravity="center_vertical|center_horizontal"
                     android:layoutDirection="locale"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
+                    android:singleLine="true"
                     android:textColor="@color/textColor"
                     android:fontFamily="@font/dubai_font"
                     android:layout_marginBottom="4dp"
