1. Removed getConfigID call. 2. Null check for the Adapters

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -111,6 +111,12 @@
 
                     android:layout_marginEnd="16dp"
                     android:src="@drawable/myid_logo" />
+            <LinearLayout
+                android:id="@+id/loginContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -317,6 +323,14 @@
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:textSize="@dimen/login_font_size" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layoutUAEPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -339,6 +353,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:src="@drawable/uae_pass" />
+            </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
