--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -39,7 +39,7 @@
                         style="@style/font_medium_bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{adapterBookmarkVM.getCurrentBookmark(position).ParcelNumber}"/>
+                        android:text='@{adapterBookmarkVM.getCurrentBookmark(position).ParcelNumber ?? ""}'/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                     style="@style/font_medium_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{adapterBookmarkVM.getCurrentBookmark(position).Area}"/>
+                    android:text='@{adapterBookmarkVM.getCurrentBookmark(position).Area ??  ""}'/>
                 </LinearLayout>
                 <TextView
                     android:id="@+id/txtDescriptionEn"
