--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -50,7 +50,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="5dp"
                             android:layout_marginVertical="5dp"
-                            android:text="@{adapterMyMapVM.getCurrentMyMap(position).parcel_id}"/>
+                            android:text='@{adapterMyMapVM.getCurrentMyMap(position).parcel_id ?? ""}'/>
                     </LinearLayout>
                     <View
                         android:layout_width="1dp"
@@ -108,7 +108,7 @@
                         android:layout_height="wrap_content"
                         android:maxLines="2"
                         android:layout_marginTop="5dp"
-                        android:text="@{adapterMyMapVM.getCurrentMyMap(position).req_created_date}"
+                        android:text='@{adapterMyMapVM.getCurrentMyMap(position).req_created_date ?? ""}'
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"/></LinearLayout>
                 </LinearLayout>
